@@ -1,3 +1,9 @@
+2014-11-14  Eli Zaretskii  <eliz@gnu.org>
+
+	* bindings.el (search-map): Fix last change: don't use 'kbd' in
+	bindings.el, since it is not yet loaded when bindings.el is
+	preloaded.
+
 2014-11-14  Fabián Ezequiel Gallina  <fgallina@gnu.org>
 
 	* progmodes/python.el (python-shell-completion-get-completions):
